--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation group: 'joda-time', name: 'joda-time', version: '2.10.8'
 
 	runtimeOnly 'org.apache.derby:derby'
+	implementation	'com.h2database:h2:+'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
