--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,10 +19,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+	implementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
 	implementation group: 'joda-time', name: 'joda-time', version: '2.10.8'
 
 	runtimeOnly 'org.apache.derby:derby'
-	implementation	'com.h2database:h2:+'
+	runtimeOnly	'com.h2database:h2:+'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
