--- a/server/build.gradle
+++ b/server/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// TODO en cours, pas de version = dernière version
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 	implementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
 	implementation group: 'joda-time', name: 'joda-time', version: '2.10.8'
