--- a/Progress/app/build.gradle
+++ b/Progress/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "org.deguet.progress"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -20,6 +20,11 @@ android {
 }
 
 dependencies {
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.5.0'
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.5.0'
+    implementation group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.5.0'
+    implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.12.0'
+
     implementation 'androidx.appcompat:appcompat:1.0.0'
     testImplementation 'junit:junit:4.12'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.1'
