--- a/AffichageErreur/app/src/main/AndroidManifest.xml
+++ b/AffichageErreur/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.deguet.erreurs">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -11,6 +10,7 @@
         android:theme="@style/Theme.Erreurs">
         <activity
             android:name="org.deguet.erreurs.MainActivity"
+            android:exported="true"
             android:theme="@style/Theme.Erreurs"
             >
             <intent-filter>
