--- a/Layouts/app/src/main/AndroidManifest.xml
+++ b/Layouts/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.deguet.layouts">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -11,6 +10,7 @@
         android:theme="@style/Theme.Layouts">
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
             >
             <intent-filter>
