--- a/Progress/app/build.gradle
+++ b/Progress/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 32
     defaultConfig {
         applicationId "org.deguet.progress"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -17,16 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'org.deguet.progress'
 }
 
 dependencies {
-    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.5.0'
-    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.5.0'
-    implementation group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.5.0'
-    implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.12.0'
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+    implementation group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.9.0'
+    implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.9.3'
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    testImplementation 'junit:junit:4.12'
-	androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
 }
