--- a/Progress/local.properties
+++ b/Progress/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 05 22:45:41 EDT 2022
-sdk.dir=C\:\\Users\\whipp\\AppData\\Local\\Android\\Sdk
+#Mon May 23 20:22:50 EDT 2022
+sdk.dir=/Users/jorisdeguet/Library/Android/sdk
